updating alignment and fixes

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
   --primary-color: rgb(212, 59, 81);
   --primary-red: rgb(255, 56, 92);
   --black: #000;
-  --grey-bk-color: #f3f3f2
+  --grey-bk-color: #f3f3f2;
+  --text-grey: rgb(113, 113, 113);
+  --text-black: rgb(22, 22, 22)
 }
 
 .side-bar {
@@ -41,7 +43,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--pri-white);
 }
 
 .App-link {
@@ -77,18 +79,25 @@ body {
   z-index: 2000;
 }
 
+.top-header-wrapper {
+  padding-top: 34px!important;
+  padding-bottom: 32px!important;
+}
+
 .header-menu .nav-link {
-  color: var(--black);
+  color: var(--text-grey);
   padding-bottom: 21px;
 }
 
 .header ul li {
   display: inline;
-  padding-right: 30px;
+  padding-right: 48px;
 }
 
 .active {
   border-bottom: 3px solid var(--primary-red);
+  color: var(--text-black)!important;
+  font-weight: 600;
 }
 
 .header-logo img {
@@ -123,7 +132,7 @@ body {
   margin: 0px !important;
   border-radius: 0px !important;
   width: 100% !important;
-  color: rgb(22, 22, 22) !important;
+  color: var(--text-black) !important;
 }
 
 .menu-item {
@@ -175,7 +184,7 @@ body {
 .header-form .anywhere-icon {
   position: absolute;
   left: 46%;
-  color: rgb(113, 113, 113);
+  color: var(--text-grey);
 }
 
 .header-form input {
@@ -194,6 +203,12 @@ body {
   margin-left: 10px;
   display: flex;
   align-items: center;
+}
+
+.sticky-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .guest-icon {
@@ -242,7 +257,7 @@ body {
   border-right-width: 1px;
   border-style: solid;
   border-top-width: 1px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--pri-white);
   width: 100%;
   border-radius: 20px;
   box-shadow: none;
@@ -295,6 +310,7 @@ body {
 
 .main-image {
   margin-bottom: 20px;
+  padding: 0px 14px!important;
 }
 
 .content-icon {
@@ -357,7 +373,7 @@ body {
 }
 
 .whiteBk .date-range{
-  background-color: #fff!important;
+  background-color: var(--pri-white)!important;
 }
 
 .greyBk .date-range{
@@ -366,7 +382,7 @@ body {
 }
 
 .ant-menu-light .ant-menu-root .ant-menu-vertical {
-  border-inline-start: 1px solid #fff!important
+  border-inline-start: 1px solid var(--pri-white)!important
 }
 
 .ant-layout-content {
