--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -35,13 +35,13 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 32px;
-  color: rgb(17, 17, 17);
+  color: var(--text-black);
 }
 
 .sidebar-header span {
   font-size: 14px;
   line-height: 28px;
-  color: rgb(17, 17, 17);
+  color: var(--text-black);
   font-weight: 400;
 }
 
@@ -57,7 +57,7 @@
 .sidebar-date p {
   font-size: 12px;
   line-height: 20px;
-  color: rgb(113, 113, 113);
+  color: var(--text-grey);
   margin-bottom: 5px;
 }
 
@@ -78,14 +78,14 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  color: rgb(17, 17, 17);
+  color: var(--text-black);
   margin-bottom: 0px;
   margin-top: 0px;
 }
 
 .before-taxes {
   margin-top: 10px;
-  color: rgb(113, 113, 113);
+  color: var(--text-grey);
 }
 
 .sidebar-details-wrapper {
@@ -103,7 +103,7 @@
     rgb(198, 47, 101) 100%
   );
   display: block;
-  color: #fff;
+  color: var(--pri-white);
   border-radius: 12px;
   height: 50px;
   width: 300px;
@@ -113,7 +113,7 @@
 
 .sidebar-button:hover {
   border: 1px solid rgb(211, 59, 80) !important;
-  color: #fff !important;
+  color: var(--pri-white) !important;
 }
 
 .sidebar-total {
@@ -143,7 +143,7 @@
   font-family: "Inter-SemiBold", "Inter", sans-serif;
   font-weight: 600;
   line-height: 20px;
-  color: rgb(17, 17, 17);
+  color: var(--text-black);
   font-size: 16px;
   margin-bottom: 5px;
 }
@@ -151,6 +151,10 @@
 .lower-sidebar-wrapper p {
   font-size: 14px;
   line-height: 20px;
-  color: rgb(113, 113, 113);
+  color: var(--text-grey);
   margin-top: 0px;
+}
+
+.sidebar-select .ant-select-open .ant-select-selection-item {
+  font-size: 14px!important;
 }
